# EE4-MedicMike

./: .rosinstall  .rosinstall.bak  CMakeLists.txt  OCR_message.msg  Pipeline1.cpp  README.md  SPR_message.msg  baxter.sh  makefile  package.xml  pmake.sh  rospipe.cpp  speech_ros.py  speech_v1.py
Database/: dbs.sql
Display/: BaxterDisplay.py
FacialRecognition/: face_enc.pkl  face_name.pkl  face_rec.py  face_rec_fast.py  fr_ros.py  setup.py
MedicMike/: CMakeLists_bak.txt  MedicMike_DB.py  database_handler.py  email_handler.py  package.xml  regex.txt
MessageFiles/: OCR_message.msg  Prescription_message.msg  package_ack.msg  package_request.msg
PythonEmail/: BaxterEmail.py  baxter_database.py  baxter_email.py  baxter_email_handler.py  baxter_package_handler.py  client.py  server.py
Scripts/: BackupDatabase.sh  RestoreDatabase.sh
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/baxter_core_msgs/: AnalogIOStates.h  AnalogOutputCommand.h  AssemblyState.h  AssemblyStates.h  CameraControl.h  CloseCameraRequest.h  CloseCameraResponse.h  CollisionAvoidanceState.h  DigitalIOStates.h  DigitalOutputCommand.h  EndEffectorProperties.h  EndpointState.h  EndpointStates.h  HeadPanCommand.h  HeadState.h  ListCamerasRequest.h  ListCamerasResponse.h  NavigatorState.h  NavigatorStates.h  OpenCameraRequest.h  OpenCameraResponse.h  SEAJointState.h  SolvePositionIKResponse.h
devel/include/baxter_maintenance_msgs/: CalibrateArmData.h  CalibrateArmEnable.h  TareData.h  TareEnable.h  UpdateSource.h  UpdateStatus.h
devel/lib/baxter_sim_hardware/: baxter_emulator
devel/lib/baxter_sim_io/: baxter_sim_io
devel/lib/baxter_sim_kinematics/: kinematics
devel/lib/pkgconfig/: atlas_moveit_config.pc  atlas_v3_moveit_config.pc  baxter_core_msgs.pc  baxter_description.pc  baxter_examples.pc  baxter_gazebo.pc  baxter_ikfast_left_arm_plugin.pc  baxter_ikfast_right_arm_plugin.pc  baxter_interface.pc  baxter_maintenance_msgs.pc  baxter_moveit_config.pc  baxter_sim_controllers.pc  baxter_sim_examples.pc  baxter_sim_hardware.pc  baxter_sim_io.pc  baxter_sim_kinematics.pc  baxter_tools.pc  iri_wam_moveit_config.pc  r2_moveit_generated.pc  rethink_ee_description.pc
devel/share/atlas_moveit_config/cmake/: atlas_moveit_configConfig.cmake
devel/share/atlas_v3_moveit_config/cmake/: atlas_v3_moveit_configConfig.cmake
devel/share/baxter_core_msgs/cmake/: baxter_core_msgs-msg-paths.cmake  baxter_core_msgsConfig.cmake
devel/share/baxter_description/cmake/: baxter_descriptionConfig.cmake
devel/share/baxter_examples/cmake/: baxter_examplesConfig.cmake
devel/share/baxter_gazebo/cmake/: baxter_gazeboConfig.cmake
devel/share/baxter_ikfast_left_arm_plugin/cmake/: baxter_ikfast_left_arm_pluginConfig.cmake
devel/share/baxter_ikfast_right_arm_plugin/cmake/: baxter_ikfast_right_arm_pluginConfig.cmake
devel/share/baxter_interface/cmake/: baxter_interfaceConfig.cmake
devel/share/baxter_maintenance_msgs/cmake/: baxter_maintenance_msgs-msg-paths.cmake  baxter_maintenance_msgsConfig.cmake
devel/share/baxter_moveit_config/cmake/: baxter_moveit_configConfig.cmake
devel/share/baxter_sim_controllers/cmake/: baxter_sim_controllersConfig.cmake
devel/share/baxter_sim_examples/cmake/: baxter_sim_examplesConfig.cmake
devel/share/baxter_sim_hardware/cmake/: baxter_sim_hardwareConfig.cmake
devel/share/baxter_sim_io/cmake/: baxter_sim_ioConfig.cmake
devel/share/baxter_sim_kinematics/cmake/: baxter_sim_kinematicsConfig.cmake
devel/share/baxter_tools/cmake/: baxter_toolsConfig.cmake
devel/share/iri_wam_moveit_config/cmake/: iri_wam_moveit_configConfig.cmake
devel/share/r2_moveit_generated/cmake/: r2_moveit_generatedConfig.cmake
devel/share/rethink_ee_description/cmake/: rethink_ee_descriptionConfig.cmake
install/: setup.sh
install/include/baxter_core_msgs/: AnalogIOState.h  CameraSettings.h  CollisionDetectionState.h  DigitalIOState.h  EndEffectorCommand.h  EndEffectorState.h  JointCommand.h  RobustControllerStatus.h  SolvePositionIKRequest.h  URDFConfiguration.h
install/include/baxter_maintenance_msgs/: UpdateSources.h
install/lib/pkgconfig/: baxter_core_msgs.pc  baxter_description.pc  baxter_examples.pc  baxter_interface.pc  baxter_maintenance_msgs.pc
install/share/baxter_core_msgs/cmake/: baxter_core_msgsConfig.cmake
mm_barcode/: CMakeLists.txt  package.xml
mm_barcode/scripts/: barcode.py
mm_db/: CMakeLists.txt  package.xml
mm_db/msg/: Collect_message.msg
mm_db/scripts/: MedicMike_DB.py  database_handler.py
mm_fr/: CMakeLists.txt  package.xml
mm_fr/msg/: DB_output.msg  FR_message.msg
mm_fr/scripts/: face_enc.npy  face_name.npy  fr_ros.py
mm_fr/scripts/MessageFiles/: OCR_message.msg
mm_movement/: CMakeLists.txt  package.xml
mm_movement/scripts/: deliver_box.py  force_listen.py  gripper.py  listen.py  pick_place.py
mm_ocr/: CMakeLists.txt  package.xml
mm_ocr/msg/: OCR_message.msg  Prescription_message.msg
mm_ocr/src/: rospipe.cpp
mm_spr/: CMakeLists.txt  package.xml
mm_spr/msg/: Face_message.msg  OCR_message.msg  SPR_message.msg
mm_spr/scripts/: speech_ros.py
mm_ui/: CMakeLists.txt  package.xml
mm_ui/scripts/: BaxterDisplay.py
ros_setup/: setup.sh  setup2.sh
src/: .rosinstall  .rosinstall.bak
tom_code/: CMakeLists.txt  package.xml
tom_code/scripts/: .move_hand.py.swp  move_hand.py
tom_code/src/: move_hand.py
(+13 files in other folders)
